--- a/index.html
+++ b/index.html
@@ -184,12 +184,13 @@
             </a>
             <a href="#mission" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-bullseye mr-1"></i>Mission
-            </a>
-            <a href="#services" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
+            </a>            <a href="#services" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-gear mr-1"></i>Services
+            </a>            <a href="https://preview.babcoding.com" target="_blank" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
+              <i class="bi bi-eye mr-1"></i>Previews
             </a>            <a href="mailto:ayhamissa416@gmail.com" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-envelope mr-1"></i>Contact
-            </a>            <a href="https://hcb.hackclub.com/donations/start/bab-coding-group" target="_blank" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
+            </a><a href="https://hcb.hackclub.com/donations/start/bab-coding-group" target="_blank" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-coin mr-1"></i>Donate
             </a>
           </div>
@@ -208,13 +209,15 @@
           </a>
           <a href="#mission" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-bullseye mr-2"></i>Mission
-          </a>
-          <a href="#services" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
+          </a>          <a href="#services" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-gear mr-2"></i>Services
+          </a>
+          <a href="https://preview.babcoding.com" target="_blank" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
+            <i class="bi bi-eye mr-2"></i>Previews
           </a>
           <a href="mailto:ayhamissa416@gmail.com" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-envelope mr-2"></i>Contact
-          </a>          <a href="https://hcb.hackclub.com/donations/start/bab-coding-group" target="_blank" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
+          </a><a href="https://hcb.hackclub.com/donations/start/bab-coding-group" target="_blank" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-coin mr-2"></i>Donate
           </a>
         </div>
