--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <i class="bi bi-people"></i>
           </div>
           <div class="text-4xl font-bold mb-2">17</div>
-          <div class="text-blue-100">Students Involved</div>
+          <div class="text-blue-100">Volunteers</div>
         </div>        <div class="hover-float">
           <div class="text-blue-100 text-3xl mb-3">
             <i class="bi bi-check-circle-fill"></i>
