--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <i class="bi bi-gear mr-1"></i>Services
             </a>            <a href="https://preview.babcoding.com" target="_blank" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-eye mr-1"></i>Previews
-            </a>            <a href="mailto:ayhamissa416@gmail.com" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
+            </a>            <a href="mailto:contact@babcoding.com" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-envelope mr-1"></i>Contact
             </a><a href="https://hcb.hackclub.com/donations/start/bab-coding-group" target="_blank" class="nav-link text-gray-700 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">
               <i class="bi bi-coin mr-1"></i>Donate
@@ -215,7 +215,7 @@
           <a href="https://preview.babcoding.com" target="_blank" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-eye mr-2"></i>Previews
           </a>
-          <a href="mailto:ayhamissa416@gmail.com" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
+          <a href="mailto:contact@babcoding.com" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-envelope mr-2"></i>Contact
           </a><a href="https://hcb.hackclub.com/donations/start/bab-coding-group" target="_blank" class="mobile-nav-link block px-3 py-2 text-gray-700 hover:text-blue-600 hover:bg-gray-50 rounded-md">
             <i class="bi bi-coin mr-2"></i>Donate
@@ -245,11 +245,11 @@
       
       <!-- CALL TO ACTION BUTTONS -->
       <div class="mt-8 space-y-4 md:space-y-0 md:space-x-4 md:flex md:justify-center">
-        <a href="mailto:ayhamissa416@gmail.com" target="_blank"
+        <a href="mailto:volunteer@babcoding.com" target="_blank"
            class="cta-button block md:inline-block bg-blue-600 text-white px-8 py-3 rounded-lg shadow-lg hover:bg-blue-700 hover:shadow-xl transform hover:scale-105 transition-all duration-300 font-medium text-center">
           <i class="bi bi-people-fill mr-2"></i>Join Our Team
         </a>
-        <a href="mailto:ayhamissa416@gmail.com" target="_blank"
+        <a href="mailto:contact@babcoding.com" target="_blank"
            class="cta-button block md:inline-block bg-green-600 text-white px-8 py-3 rounded-lg shadow-lg hover:bg-green-700 hover:shadow-xl transform hover:scale-105 transition-all duration-300 font-medium text-center">
           <i class="bi bi-globe mr-2"></i>Request a Website
         </a>
