--- a/ai/index.html
+++ b/ai/index.html
@@ -471,7 +471,7 @@
                   Professional Output
                 </label>
                 <div class="relative">
-                  <div id="output" class="w-full p-3 sm:p-4 bg-gray-50 border border-gray-200 rounded-lg sm:rounded-xl min-h-[100px] sm:min-h-[120px] whitespace-pre-wrap text-gray-800 leading-relaxed text-sm sm:text-base"></div>
+                  <div id="output" class="w-full p-3 sm:p-4 pr-16 sm:pr-20 bg-gray-50 border border-gray-200 rounded-lg sm:rounded-xl min-h-[100px] sm:min-h-[120px] whitespace-pre-wrap text-gray-800 leading-relaxed text-sm sm:text-base"></div>
                   <button id="copyBtn" class="absolute top-2 sm:top-3 right-2 sm:right-3 bg-white hover:bg-gray-50 text-gray-700 px-2 sm:px-3 py-1.5 sm:py-2 rounded-md sm:rounded-lg shadow-sm border border-gray-200 flex items-center space-x-1 sm:space-x-2 transition-all text-xs sm:text-sm">
                     <i class="bi bi-clipboard"></i>
                     <span class="hidden sm:inline">Copy</span>
